{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 302,
  "lineage": "e32897af-8d95-b664-f57e-2a4f393c7230",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:584860322364:instance/i-0561c779d332f8947",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0561c779d332f8947",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0382a7e212c8deb1f",
            "private_dns": "ip-10-0-30-10.us-east-2.compute.internal",
            "private_ip": "10.0.30.10",
            "public_dns": "ec2-3-145-166-112.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.166.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-071b4c7cc83126c8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a189a8e51791c9c8",
            "tags": {
              "Env": "Development",
              "Name": "Server-1",
              "Owner": "Terraform"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Server-1",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09be522ed838c4f54",
              "sg-0a1d392208b7dffab"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.SG_ALLOW_HTTP",
            "aws_security_group.SG_ALLOW_Ping_SSH",
            "aws_subnet.subnet1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:584860322364:instance/i-02f3f359e9434f1bf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f3f359e9434f1bf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09c8f337fa1549958",
            "private_dns": "ip-10-0-30-20.us-east-2.compute.internal",
            "private_ip": "10.0.30.20",
            "public_dns": "ec2-3-145-170-50.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.170.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e58d8607819f1dad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a189a8e51791c9c8",
            "tags": {
              "Env": "Development",
              "Name": "Server-2",
              "Owner": "Terraform"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Server-2",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09be522ed838c4f54",
              "sg-0a1d392208b7dffab"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.SG_ALLOW_HTTP",
            "aws_security_group.SG_ALLOW_Ping_SSH",
            "aws_subnet.subnet1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:584860322364:instance/i-080377c3af71f5332",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080377c3af71f5332",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00d94fbbb0cfb0e3d",
            "private_dns": "ip-10-0-30-30.us-east-2.compute.internal",
            "private_ip": "10.0.30.30",
            "public_dns": "ec2-3-141-4-21.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.4.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0058b33ebf26f2532",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a189a8e51791c9c8",
            "tags": {
              "Env": "Development",
              "Name": "Server-3",
              "Owner": "Terraform"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "Server-3",
              "Owner": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09be522ed838c4f54",
              "sg-0a1d392208b7dffab"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.SG_ALLOW_HTTP",
            "aws_security_group.SG_ALLOW_Ping_SSH",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:internet-gateway/igw-026b47b36c8d7d121",
            "id": "igw-026b47b36c8d7d121",
            "owner_id": "584860322364",
            "tags": {
              "Name": "Gateway Main"
            },
            "tags_all": {
              "Name": "Gateway Main"
            },
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:route-table/rtb-00671ce65eda8e9ea",
            "id": "rtb-00671ce65eda8e9ea",
            "owner_id": "584860322364",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b47b36c8d7d121",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_table_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0965d3f56372b323d",
            "route_table_id": "rtb-00671ce65eda8e9ea",
            "subnet_id": "subnet-0a189a8e51791c9c8"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.gw",
            "aws_route_table.routeA",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_table_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031c1456532373636",
            "route_table_id": "rtb-00671ce65eda8e9ea",
            "subnet_id": "subnet-0a94c2430258fee98"
          },
          "dependencies": [
            "aws_vpc.main",
            "aws_internet_gateway.gw",
            "aws_route_table.routeA",
            "aws_subnet.subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass_table_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f0eba4f8900e377",
            "route_table_id": "rtb-00671ce65eda8e9ea",
            "subnet_id": "subnet-0ff0d6c21199b7f3a"
          },
          "dependencies": [
            "aws_subnet.subnet3",
            "aws_vpc.main",
            "aws_internet_gateway.gw",
            "aws_route_table.routeA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_ALLOW_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:security-group/sg-09be522ed838c4f54",
            "description": "Allow http and https",
            "egress": [],
            "id": "sg-09be522ed838c4f54",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_ALLOW_HTTP",
            "name_prefix": "",
            "owner_id": "584860322364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Http and Https"
            },
            "tags_all": {
              "Name": "Http and Https"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_ALLOW_Ping_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:security-group/sg-0a1d392208b7dffab",
            "description": "Allow Ping and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1d392208b7dffab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_ALLOW_Ping_SSH",
            "name_prefix": "",
            "owner_id": "584860322364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ping and SSH"
            },
            "tags_all": {
              "Name": "Ping and SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0a189a8e51791c9c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-0a189a8e51791c9c8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet1 on  us-east-2a"
            },
            "tags_all": {
              "Name": "Subnet1 on  us-east-2a"
            },
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0a94c2430258fee98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-0a94c2430258fee98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet2 on  us-east-2b"
            },
            "tags_all": {
              "Name": "Subnet2 on  us-east-2b"
            },
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:subnet/subnet-0ff0d6c21199b7f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.60.0/24",
            "id": "subnet-0ff0d6c21199b7f3a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "584860322364",
            "tags": {
              "Name": "Subnet3 on  us-east-2c"
            },
            "tags_all": {
              "Name": "Subnet3 on  us-east-2c"
            },
            "vpc_id": "vpc-007d847824c99f6f0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:584860322364:vpc/vpc-007d847824c99f6f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-047cc3c852268accd",
            "default_route_table_id": "rtb-0720fb6bc6d4819fa",
            "default_security_group_id": "sg-08828ce3197173720",
            "dhcp_options_id": "dopt-78c6a313",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-007d847824c99f6f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0720fb6bc6d4819fa",
            "owner_id": "584860322364",
            "tags": {
              "Name": "First VPC"
            },
            "tags_all": {
              "Name": "First VPC"
            }
          }
        }
      ]
    }
  ]
}